Some issues with video not playing on safari.

--- a/styles/base/_resets.scss
+++ b/styles/base/_resets.scss
@@ -71,3 +71,5 @@ select {
     scroll-behavior: auto !important;
   }
 }
+
+.firebase-emulator-warning { display: none; }
