--- a/styles/layouts/_home.scss
+++ b/styles/layouts/_home.scss
@@ -42,8 +42,9 @@
     rgba(49, 49, 52, 1) 81%,
     rgba(30, 30, 31, 1) 100%
   );
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   transition: all 500ms ease-in-out;
 
   .slide-out {
